--- a/index.html
+++ b/index.html
@@ -275,6 +275,18 @@
                                             Ha Noi - Viet Nam
                                         </div>
                                     </div>
+                                    <div class="col-sm-2">
+                                        <div class="pb-1">Github:</div>
+                                    </div>
+                                    <div class="col-sm-10">
+                                        <a
+                                            href="https://github.com/vuongtruong97"
+                                            class="pb-1 fw-bolder" 
+                                            target="_blank" 
+                                        >
+                                       github.com/vuongtruong97
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                             <div
@@ -533,15 +545,15 @@
                                 >
                             </div>
                             <div class="grid-item">
-                                <a href="https://www.adobe.com/">
+                                <a href="https://www.youtube.com/watch?v=DJVkWWzvgCQ">
                                     <figure class="portfolio-item">
                                         <img
                                             src="images/portfolio/4-small.png"
-                                            data-bp="images/portfolio/4.jpg"
+                                            data-bp="images/portfolio/4.png"
                                         />
                                         <figcaption>
-                                            <h4 class="h5 mb-0">Video Editing</h4>
-                                            <div>Adobe After Effects</div>
+                                            <h4 class="h5 mb-0">SHOBEE ECOMMERCE</h4>
+                                            <div>Maketplace Platform</div>
                                         </figcaption>
                                     </figure></a
                                 >
@@ -589,7 +601,7 @@
                                 >
                             </div>
                             <div class="grid-item">
-                                <a href="https://flutter.dev/">
+                                <a href="#">
                                     <figure class="portfolio-item">
                                         <img
                                             src="images/portfolio/8-small.png"
