--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                             ></a>
                                             <a
                                                 class="btn btn-secondary shadow-sm mt-1 hover-effect"
-                                                href="./files/Truong-Quoc-Vuong-Fresher-Web-Developer-TopCV.vn-090922.212109.pdf"
+                                                href="./files/vuongtruong_cv.pdf"
                                                 download="vuong_truong_cv"
                                                 >Download CV
                                                 <i class="fas fa-arrow-right"></i
